--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,6 +12,13 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.SolRural"
         tools:targetApi="31" >
+        <activity android:name=".activity.CadastroActivity" />
+        <activity android:name=".activity.LerSobreActivity" />
+        <activity android:name=".activity.LoginActivity" />
+        <activity android:name=".activity.MainActivity" />
+        <activity android:name=".activity.ParteDoProjetoActivity" />
+
+
         <activity
             android:name=".activity.MainActivity"
             android:exported="true" >
