--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,9 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools" >
 
+    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
+
     <application
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
@@ -12,10 +15,10 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.SolRural"
         tools:targetApi="31" >
-        <activity android:name=".activity.CadastroActivity" />
         <activity android:name=".activity.LerSobreActivity" />
         <activity android:name=".activity.LoginActivity" />
         <activity android:name=".activity.ParteDoProjetoActivity" />
+        <activity android:name=".activity.CadastrarActivity"/>
 
 
         <activity
