adicionando o realtime database do firebase

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,6 +19,7 @@
         <activity android:name=".activity.LoginActivity" />
         <activity android:name=".activity.PatrocinadoresActivity" />
         <activity android:name=".activity.CadastrarActivity"/>
+        <activity android:name=".activity.PerfilActivity"/>
 
 
         <activity
