--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,7 +17,7 @@
         tools:targetApi="31" >
         <activity android:name=".activity.LerSobreActivity" />
         <activity android:name=".activity.LoginActivity" />
-        <activity android:name=".activity.PatrocinadoresActivity" />
+        <activity android:name=".activity.BeneficiosActivity" />
         <activity android:name=".activity.CadastrarActivity"/>
         <activity android:name=".activity.PerfilActivity"/>
         <activity android:name=".activity.EditarActivity" />
